fix: restore a reduced margin to repair footer overlap

--- a/app/assets/stylesheets/limber/screen.scss
+++ b/app/assets/stylesheets/limber/screen.scss
@@ -122,6 +122,10 @@ header.limber-header {
   }
 }
 
+#app {
+  margin-bottom: 50px;
+}
+
 #flashes {
   @extend .col-12;
 }
